[fix] responsive on small device

--- a/src/index.css
+++ b/src/index.css
@@ -90,3 +90,9 @@ html {
     box-shadow: inset 0 0 0 0px;
   }
 }
+
+@media (max-height: 668px) {
+  .chat-container {
+  height: 468px !important;
+  }
+}
